# QuantumAtlas

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  QUANTUM_ATLAS.md  README.md  docker-compose.yml  env.service.defaults  go.mod  go.sum  mkdocs.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: bump-version-pr.yml  go.yml  nightly.yml  pytest.yml  release.yml
agentic_search/: README.md
agentic_search/qatlas_agentic_search/: __init__.py  agent.py  cli.py  config.py  engine.py  ranking.py
agentic_search/tests/: conftest.py  test_agent.py  test_backends_parse.py  test_models_ranking.py  test_smoke_search.py
atlas/: __init__.py  cli.py  paper_assets.py  runtime_metadata.py
atlas/client/: __main__.py  _common.py  auth.py  mineru.py  upload.py
atlas/codegen/: __init__.py  __main__.py  generator.py  qiskit_generator.py  template_engine.py
atlas/designer/: __init__.py  __main__.py  designer.py  optimizer.py  primitive_composer.py  primitive_loader.py  quantum_circuit.py
atlas/estimator/: __init__.py  __main__.py  estimator.py  report_generator.py  resource_analyzer.py
atlas/extractor/: __init__.py  __main__.py  algorithm_ir.py  extractor.py  llm_interface.py
atlas/knowledge/: __init__.py  neo4j_client.py
atlas/knowledge_graph/: __init__.py
atlas/parser/: __main__.py  arxiv_fetcher.py  mineru_client.py  pdf_parser.py
atlas/server/: __init__.py  auth.py  config.py  main.py  service.py  tasks.py
atlas/validator/: __init__.py  __main__.py  equivalence_checker.py  reference_comparison.py  test_framework.py  validator.py
atlas/wiki/: __main__.py  engine.py  ingester.py  linter.py  page.py  templates.py
cmd/migrate-raw-to-s3/: main.go
cmd/qatlas-server/: bootstrap_index_cmd.go  install-server.sh  main.go  openalex_cmd.go  papers_cmd.go  pat_cmd.go  pat_cmd_test.go  service_cmd.go  service_cmd_test.go  service_template.go  sqlite_tuning.go  storage_cmd.go  storage_cmd_test.go  users_cmd.go
cmd/qatlasd/: config_cmd.go  config_cmd_test.go  install-qatlasd.sh  install-server.sh  main.go  openalex_cmd.go  papers_cmd.go  pat_cmd.go  pat_cmd_test.go  pbdata_lock.go  pbdata_lock_test.go  serve_flags.go  serve_flags_test.go  service_cmd.go  service_cmd_test.go  service_template.go  storage_cmd.go  storage_migrate_cmd.go  storage_migrate_cmd_test.go  users_cmd.go
cmd/server/: main.go  pat_cmd.go  storage_cmd.go
deploy/: .env.docker.example  docker-compose.standalone.yml  docker-compose.yml  nas-rustfs-compose.example.yaml  qdrant-compose.example.yaml
docker/: Caddyfile.example  docker-compose.yml
docs/: .pages  about.md  architecture.md  contributing.md  contribution-workflow.md  deployment.md  development.md  getting-started.md  index.md  migration-storage-layout.md  python-legacy.md  requirements.txt  storage-design.md  storage-rustfs.md  upload-api.md  wiki-conventions.md
docs/about/: .pages  credits.md  design-philosophy.md  external-data-sources.md  faq.md  graph-visualization-research.md  index.md  license-and-attribution.md  python-legacy.md  terms-of-service.md
docs/concepts/: .pages  architecture.md  auth-model.md  bucket-layout.md  bucket-migration-reconciliation.md  data-flow.md  index.md  multi-edge.md  storage-architecture.md  three-layer.md
docs/deployment/: .pages  backup-and-upgrade.md  docker.md  github-oauth.md  health-and-monitoring.md  index.md  install.md  migration-storage-layout.md  neo4j.md  operations.md  rag.md  reverse-proxy.md  rustfs.md  server-config.md
docs/guides/: .pages  circuit-toolchain.md  contribute-content.md  generate-wiki-content.md  index.md  ingest-papers.md  lint-wiki.md  manage-credentials.md  parse-with-mineru.md  share-and-download.md  upload-assets.md  write-wiki-pages.md
docs/javascripts/: mermaid.js
docs/reference/: .pages  api-explorer.md  arxiv-ids.md  cli-qatlas-server.md  cli-qatlas.md  cli-qatlasd.md  env-vars.md  index.md  rest-api.md  upload-api.md  wiki-schema.md
docs/snippets/: .gitkeep
docs/spikes/: bulk-data-rustfs-2026-05-29.md
docs/stylesheets/: extra.css
examples/: demo_pipeline.py
hooks/: openapi_spec.py
internal/apidocs/: docs.go  swagger.json  swagger.yaml
internal/arxiv/: fetcher.go  fetcher_test.go  resolve_version.go  resolve_version_test.go
internal/auth/: oauth.go  oauth_test.go
internal/config/: config.go  config_test.go
internal/healthz/: healthz.go  healthz_test.go
internal/mineru/: client.go  client_test.go  converter.go  converter_test.go  errors.go  errors_test.go  keyring.go  pdfurl.go
internal/mineruclaim/: claim.go
internal/neo4j/: client.go  write.go
internal/oauthdevice/: migrations.go  oauthdevice.go  oauthdevice_test.go
internal/objstore/: local.go  local_test.go  router.go  s3.go  s3_dual_test.go  s3_test.go  store.go
internal/openalex/: client.go  ingest.go  lookup.go  lookup_test.go  metadata_test.go  parse.go
internal/paperassets/: doi.go  doi_test.go  dual_read.go  dual_read_test.go  fs.go  key_test.go  parse.go  parse_test.go  path.go  path_test.go  resolve_store.go  (+1 more)
pb_migrations/: README.md
pb_public/: README.md
qatlas/: __init__.py  cli.py  config.py  config_yaml.py  paper_assets.py  paths.py
rag/: .env.example  .gitignore  README.md
scripts/: init_primitives.py  migrate_to_wiki.py  migrate_wiki_types.py  rustfs_audit_bootstrap.sh  rustfs_bootstrap.sh  rustfs_notify_bootstrap.sh  setup-nightly-secrets.sh  setup_quantum_team_cifs_credentials.sh  test_quantum_team_cifs_mount.sh  test_quantum_team_cifs_user_variants.sh  verify_neo4j.py
search/: README.md
tests/: __init__.py  conftest.py  test_cli.py  test_client_auth.py  test_client_common.py  test_config_yaml.py  test_docker_compose.py  test_paper_assets_ids.py  test_paths.py
tmp/: RAW_MIGRATION_README.md  migrate_bulk_pdfs.py  migrate_kb_assets.py  prepare_empty_raw.py  raw_migration_common.py  rebuild_raw_index.py
web/: .env.development.example  .gitignore  README.md  embed.go  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
wiki/: index.md
(+378 files in other folders)
