[project]
name = "quantumatlas"
version = "0.2.2"
description = "AI 驱动的量子算法开发辅助系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "QuantumAtlas Team", email = "team@quantumatlas.dev" }]
keywords = ["quantum", "algorithm", "llm", "knowledge-graph", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.30.0,<0.31",
    "jinja2>=3.1.0,<4",
    "python-multipart>=0.0.9,<0.1",
    "neo4j>=5.15.0,<6",
    "pymupdf>=1.23.0,<2",
    "requests>=2.31.0,<3",
    "pydantic>=2.5.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "numpy>=1.26.0,<3",
    "click>=8.1.0,<9",
    "openai>=1.0.0,<2",
    "anthropic>=0.21.0,<0.22",
    "pyyaml>=6.0.1,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "ruff>=0.8.0",
]

[project.scripts]
qatlas = "atlas.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: tests that require outbound network access (e.g. arXiv API)",
    "e2e: end-to-end tests that load the repository .env and exercise real external services",
    "legacy: targets only the legacy FastAPI server (atlas/server/), not the current Go server (cmd/server). Excluded by default.",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# ============================================================================
# Pixi project (manages the Go toolchain alongside Python)
# ============================================================================
# Why pixi at all? The Go binary needs to be cross-built locally before
# scp'ing to the 1810 server. Pixi pins go's version + brings along the
# matching cc shim so `go vet ./...` doesn't try (and fail) to call a
# missing system gcc. Without this, agents would have to remember to
# `go env -w CGO_ENABLED=0` on every fresh dev machine.
#
# Usage:
#   pixi install        # one-time, creates .pixi/ env
#   pixi shell          # enter env for ad-hoc commands
#   pixi run build      # build the server binary
#   pixi run test-go    # run Go test suite
#   pixi run test-py    # run Python (pytest) suite

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# Why both `go` *and* `gxx`?
#
# conda-forge's `go` package is compiled with `CC=x86_64-conda-linux-gnu-cc`
# baked into its internal/cfg (Go records the build-time C compiler so
# cgo invocations know what to call). At runtime, anything that touches
# the cgo code path — `go vet ./...`, `go build ./...`, even `go list`
# in some configurations — will try to exec `x86_64-conda-linux-gnu-cc`
# and hang or fail if it can't find it.
#
# `gxx` is the conda-forge meta-package for the GNU C/C++ toolchain. It
# drops `x86_64-conda-linux-gnu-cc` + `gcc` + `cc` shims (all linking to
# the same real GCC) into .pixi/envs/default/bin/, satisfying the
# baked-in lookup.
#
# Our actual code is pure-Go (modernc.org/sqlite, no cgo imports), so
# `CGO_ENABLED=0 go build ./cmd/server` would also work — but that
# requires every dev to remember the env var. Bundling `gxx` keeps the
# cgo lookup happy "by default" and stays correct if anyone later
# imports a cgo-using library.
#
# Version pin: 1.26.x matches go.mod's `go 1.26.2`. Bump both together
# when upgrading. conda-forge tracks upstream Go releases within ~days.
go = "1.26.*"
gxx = "*"

[tool.pixi.tasks]
build = "go build -o build/quantumatlas ./cmd/server"
test-go = "go test ./internal/... ./cmd/..."
test-py = "uv run pytest -m 'not e2e and not legacy and not network'"
# `go vet ./internal/... ./cmd/...` is intentionally scoped to *our*
# packages, not the conventional `./...`. Reasoning:
#
# `go vet`'s analyzer phase only runs on the packages you ask for, but
# its typecheck phase (a lightweight build) has to compile every
# transitive import. PocketBase pulls in ~200 indirect deps, so the
# cold-cache typecheck of `./...` takes 10+ minutes; even after the
# build cache (.gocache/build, ~540MB) is warm, running analyzers
# against test-only packages adds noise without catching production
# bugs.
#
# Narrowing to ./internal/... ./cmd/... gives:
#   cold cache: 15s  (typecheck deps once, populate cache)
#   warm cache: 0.15s (cache hit, analyzers fly)
#
# CI (when we add it) can afford `./...` with actions/cache; daily
# local dev cannot.
vet = "go vet ./internal/... ./cmd/..."
