[project]
name = "quantum-atlas"
version = "0.19.0"
description = "AI 驱动的量子算法开发辅助系统"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "IAI-USTC-Quantum" }]
keywords = ["quantum", "algorithm", "llm", "knowledge-graph", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jinja2>=3.1.0,<4",
    "requests>=2.31.0,<3",
    "pydantic>=2.5.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "numpy>=1.26.0,<3",
    "click>=8.1.0,<9",
    "openai>=1.0.0,<2",
    "anthropic>=0.21.0,<0.22",
    "pyyaml>=6.0.1,<7",
    "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "ruff>=0.8.0",
]
# --- qatlas_rag extras (see ./rag/README.md) -----------------------------
# Three role-scoped extras for the RAG sidecar/embed-worker/ingester
# pipeline. None of these are pulled in by `pip install quantum-atlas`
# — the base client stays light.
#
# Edge sidecar (FastAPI proxy in front of Qdrant). No torch.
sidecar = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qdrant-client>=1.12,<1.14",
    "httpx[socks]>=0.27",
]
# Embed worker: bge-m3 + reranker on GPU. Pins below verified on
# RTX 5080 / sm_120 Blackwell, Python 3.12.13 (see
# rag/scripts/spike/phase1_gpu_smoke.py). Loosen the `==` pins only
# after re-running the spike with the new combo.
embed = [
    "torch==2.11.0+cu128",
    "transformers==4.57.6",
    "FlagEmbedding==1.4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
# Ingester: S3 listing + chunking + Qdrant upsert. qdrant-client must
# stay within 1 minor of the server (1.12.4) — see qdrant_remote.py:282
# compatibility check.
ingest = [
    "boto3>=1.35",
    "mistune>=3.0",
    "sqlalchemy>=2.0",
    "qdrant-client>=1.12,<1.14",
    "tqdm>=4.66",
    "httpx[socks]>=0.27",
]

[project.scripts]
qatlas = "qatlas.cli:main"
qatlas-rag = "qatlas_rag.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qatlas", "rag/qatlas_rag"]

# Map source path to package name so `import qatlas_rag` resolves to
# the rag/ subdirectory without exposing `rag` as a namespace.
[tool.hatch.build.targets.wheel.sources]
"rag/qatlas_rag" = "qatlas_rag"

# --- PyTorch cu128 wheel (sm_120 / Blackwell) ---
# torch>=2.7 + CUDA 12.8 is the first combo that supports sm_120
# (RTX 5080). Scoped only to `torch` so other deps still resolve from
# PyPI normally. Only consumed when installing the `embed` extra.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
annotated_tag = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests", "rag/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: tests that require outbound network access (e.g. arXiv API)",
    "e2e: end-to-end tests that load the repository .env and exercise real external services",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# ============================================================================
# Pixi project (manages the Go toolchain alongside Python)
# ============================================================================
# Why pixi at all? The Go binary needs to be cross-built locally before
# deploying to the server host. Pixi pins go's version + brings along the
# matching cc shim so `go vet ./...` doesn't try (and fail) to call a
# missing system gcc. Without this, agents would have to remember to
# `go env -w CGO_ENABLED=0` on every fresh dev machine.
#
# Usage:
#   pixi install        # one-time, creates .pixi/ env
#   pixi shell          # enter env for ad-hoc commands
#   pixi run build      # build the server binary
#   pixi run test-go    # run Go test suite
#   pixi run test-py    # run Python (pytest) suite

[tool.pixi.workspace]
channels = ["conda-forge"]
# All four target platforms for which we publish qatlasd binaries
# in the release workflow. Adding a platform here just tells pixi to
# resolve the lockfile on that arch — the conda-forge `go` and `gxx`
# packages are available for every entry. Without this, pixi refuses to
# install on non-listed runners ("unsupported-platform" error), which
# is what release.yml's binary-build matrix ran into the first time it
# tried macos-* / ubuntu-*-arm runners.
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.activation.env]
# Keep Go's build/module caches *inside* the repo so they live and die
# with the project. Without this, Go defaults to ~/.cache/go-build and
# ~/go/pkg/mod (user-global), which means every project on this machine
# shares the same warm/cold state — a footgun when the user has many
# Go projects with very different dep trees. Putting the cache under
# .gocache/ also makes it cleanly ignorable in .gitignore.
GOCACHE = "$PIXI_PROJECT_ROOT/.gocache/build"
GOMODCACHE = "$PIXI_PROJECT_ROOT/.gocache/pkg/mod"
GOPATH = "$PIXI_PROJECT_ROOT/.gocache"

# CGO_ENABLED=1 is REQUIRED for `marcboeker/go-duckdb` (libduckdb cgo
# binding used by internal/paperindex for the metadata catalog). The
# rest of the codebase remains pure-Go (modernc.org/sqlite); turning
# cgo on at build time costs us ~30MB binary size and a C-toolchain
# dependency at build host (already satisfied by the `gxx` dep below).
# Runtime has zero extra requirement — go-duckdb statically links
# libduckdb into the binary.
#
# Setting it here in pixi activation.env means any `pixi run ...`
# invocation gets cgo on, overriding whatever the user's
# ~/.config/go/env has globally. Plain `go build` outside pixi will
# still respect ~/.config/go/env (which on many devs' machines is set
# to 0 to avoid the conda gxx hang documented above) — those devs
# need to `pixi run build` rather than direct `go build`.
CGO_ENABLED = "1"

[tool.pixi.dependencies]
# Why both `go` *and* `gxx`?
#
# conda-forge's `go` package is compiled with `CC=x86_64-conda-linux-gnu-cc`
# baked into its internal/cfg (Go records the build-time C compiler so
# cgo invocations know what to call). At runtime, anything that touches
# the cgo code path — `go vet ./...`, `go build ./...`, even `go list`
# in some configurations — will try to exec `x86_64-conda-linux-gnu-cc`
# and hang or fail if it can't find it.
#
# `gxx` is the conda-forge meta-package for the GNU C/C++ toolchain. It
# drops `x86_64-conda-linux-gnu-cc` + `gcc` + `cc` shims (all linking to
# the same real GCC) into .pixi/envs/default/bin/, satisfying the
# baked-in lookup.
#
# Our actual code is pure-Go (modernc.org/sqlite, no cgo imports
# previously)... **now** `marcboeker/go-duckdb` was added for the
# paperindex metadata catalog (docs/architecture.md). That binding
# uses cgo, so `CGO_ENABLED=1` is the new default — see the
# [tool.pixi.activation.env] block above. `gxx` is therefore no
# longer optional; it's what allows go build to find
# `x86_64-conda-linux-gnu-cc` at link time.
#
# Version pin: 1.26.x matches go.mod's `go 1.26.2`. Bump both together
# when upgrading. conda-forge tracks upstream Go releases within ~days.
go = "1.26.*"
gxx = "*"

[tool.pixi.tasks]
build = "go build -o build/qatlasd ./cmd/qatlasd"
test-go = "go test ./internal/... ./cmd/..."
test-py = "uv run pytest -m 'not e2e and not network'"
# `go vet ./internal/... ./cmd/...` is intentionally scoped to *our*
# packages, not the conventional `./...`. Reasoning:
#
# `go vet`'s analyzer phase only runs on the packages you ask for, but
# its typecheck phase (a lightweight build) has to compile every
# transitive import. PocketBase pulls in ~200 indirect deps, so the
# cold-cache typecheck of `./...` takes 10+ minutes; even after the
# build cache (.gocache/build, ~540MB) is warm, running analyzers
# against test-only packages adds noise without catching production
# bugs.
#
# Narrowing to ./internal/... ./cmd/... gives:
#   cold cache: 15s  (typecheck deps once, populate cache)
#   warm cache: 0.15s (cache hit, analyzers fly)
#
# CI (when we add it) can afford `./...` with actions/cache; daily
# local dev cannot.
vet = "go vet ./internal/... ./cmd/..."
# Regenerate the OpenAPI spec from the swaggo annotations in
# internal/routes/openapi.go (+ general info in cmd/qatlasd/main.go).
# Output lands in internal/apidocs/, which is blank-imported by main.go and
# served at /swagger. swag is pinned via the `tool` directive in go.mod, so
# `go tool swag` always matches the committed CLI version.
swagger = "go tool swag init -g main.go -d ./cmd/qatlasd,./internal/routes -o internal/apidocs --parseInternal --parseDepth 1"
# CI drift-guard: regenerate the spec and fail if the committed files differ
# from what the annotations produce. Keeps internal/apidocs/ in sync without
# trusting humans to rerun `pixi run swagger`.
swagger-check = "go tool swag init -g main.go -d ./cmd/qatlasd,./internal/routes -o internal/apidocs --parseInternal --parseDepth 1 && git diff --exit-code -- internal/apidocs"
